--- a/L-our-lab-experiments/my-first-website.html
+++ b/L-our-lab-experiments/my-first-website.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Change me...</h1>
+    <h1>Change me...</h1>
     <script>
         // Task after the brake:
         // 1. use document.querySelector + 
@@ -17,6 +18,20 @@
 
         // https://developer.mozilla.org/en-US/docs/Web/API/Document/querySelector
         // https://developer.mozilla.org/en-US/docs/Web/API/HTMLElement/innerText
+
+        const h1 = document.querySelector('h1');
+
+        if(h1 !== null) {
+            // this will show me helful repesentation of the reference to object
+            console.log(h1)
+            // this will show me acutal object:
+            console.dir(h1)
+
+            h1.innerText = 'Hello World';
+        }
+
+
+        // null.innerText = '';
     </script>
 </body>
 </html>
