task(g02): make it right be DRY!

--- a/G-modify-DOM/g02-dom-node-or-element.html
+++ b/G-modify-DOM/g02-dom-node-or-element.html
@@ -11,11 +11,17 @@
          * This website body is empty, even if you do this:
          * */
 
-        const headerOne = document.createElement('h1');
-        headerOne.innerText = 'Hello Text'
+        const headerOne = makeElement('Hello Text')
 
-        const headerTwo = document.createElement('h1');
-        headerTwo.innerText = 'Hello Text2'
+        const headerTwo = makeElement('Hello Text2', 'h2')
+
+        function makeElement(text = 'hello', tagName = 'h1') {
+             const heading = document.createElement(tagName);
+             heading.innerText = text
+             return heading;
+        }
+
+        document.body.append(headerOne, '---', headerTwo, makeElement())
 
         // This will not be rendered on the DOM.
         // That is because, it is an Element and a proper Object, but We did not append it to <body> element yet !
@@ -24,7 +30,7 @@
         // document.body.appendChild(headerOne)
 
         // You can also do it that way (if you want to add multiple Elements as next arguments)
-        document.body.append(headerOne, '---', headerTwo)
+
 
         // From now on, when element is on the DOM it will become a part of the DOM Node Tree.
 
